# python-next-api-starter

./: .gitattributes  .gitignore  README.md  package.json  precommit.sh  swagger.yml
api/: .default.env  .pylintrc  README.md  precommit.sh  pyproject.toml  swagger.yml
api/src/: main.py  server.py
api/src/auth/: README.md  __init__.py  auth.py  recaptcha.py  shared.py  users.py
api/src/misc/: README.md  __init__.py  index.py
api/src/models/: __init__.py  base_model.py  users.py
api/src/utils/: README.md  __init__.py  config.py  constants.py  datetime.py  enums.py  json_fix.py  main.py  message_object.py  middleware.py  pagination.py
frontend/: .default.env  README.md  next.config.js  next.config.ts  package.json  tsconfig.json
frontend/public/: manifest.json  robots.txt
frontend/public/pwa/: .gitignore
frontend/src/components/: Footer.tsx  Header.tsx  SEO.tsx
frontend/src/data/: changes.ts
frontend/src/layouts/: empty.tsx  main.tsx
frontend/src/locale/: en.ts  type.ts
frontend/src/pages/: 404.tsx  _app.tsx  _document.tsx  changelog.tsx  index.tsx
frontend/src/state/: reduxWrapper.tsx
frontend/src/styles/: global.scss
frontend/src/utils/: axios.ts  download.ts  misc.ts  mode.ts  storage.ts  variables.ts
scripts/: README.md
scripts/install/: git-secrets.sh
scripts/precommit/: check_symlinks.sh  line_endings.sh  python_poetry.sh  spaces.sh
